# pythonProject3Bootstrap

./: README.md  main.py  pyproject.toml  requirements.txt
data/: catalog.html  category-1.html  contacts.html  main.html
